--- a/src/assets/styles/css/AuthorSidebar.css
+++ b/src/assets/styles/css/AuthorSidebar.css
@@ -1,11 +1,11 @@
 .author-sidebar {
-  width: 35%;
+  width: 34%;
   padding-left: 10px; }
 
 @media (max-width: 1200px) {
   .author-sidebar {
     width: 100%;
-    padding: 0; } }
+    padding: 0px; } }
 @media (max-width: 1100px) {
   .author-sidebar {
     padding: 70px 0px; } }
