--- a/src/assets/styles/css/Banner.css
+++ b/src/assets/styles/css/Banner.css
@@ -1,6 +1,6 @@
 .banner {
   width: 100%;
-  margin: 20px 0;
+  padding: 20px 0;
   font-family: "Open Sans", sans-serif; }
   .banner__canvas {
     box-shadow: 0 0 8px rgba(0, 0, 0, 0.08);
