--- a/src/redux/components/AuthorSidebar/AuthorSidebar.scss
+++ b/src/redux/components/AuthorSidebar/AuthorSidebar.scss
@@ -1,12 +1,12 @@
 .author-sidebar {
-  width: 35%;
+  width: 34%;
   padding-left: 10px;
 }
 
 @media(max-width: 1200px) {
   .author-sidebar {
     width: 100%;
-    padding: 0;
+    padding: 0px;
   }
 }
 
