--- a/src/redux/components/Baner/Banner.scss
+++ b/src/redux/components/Baner/Banner.scss
@@ -1,11 +1,11 @@
 @import '../../../assets/styles/scss/styles.scss';
 
-.banner{
+.banner {
   width: 100%;
-  margin: 20px 0;
+  padding: 20px 0;
   font-family: $open-sans-font;
 
-  &__canvas{
+  &__canvas {
     box-shadow: 0 0 8px rgba(0, 0, 0, 0.08);
     border-radius: 8px;
     display: flex;
@@ -20,14 +20,15 @@
   }
 }
 
-@media(max-width: 1200px){
-  .banner{
+@media(max-width: 1200px) {
+  .banner {
     display: none;
   }
 }
 
-.flags{
+.flags {
   padding: 10px 0;
+
   &__box {
     box-shadow: 0 0 8px rgba(0, 0, 0, 0.08);
     border-radius: 8px;
@@ -37,14 +38,15 @@
     padding: 5px 5px 5px 7px;
     margin: 0 10px 7px 0;
   }
-  &__icon{
+
+  &__icon {
     color: $light-gray-color;
     font-size: 15px;
     padding: 0 5px 0 10px;
   }
 }
 
-.flags__box:hover{
+.flags__box:hover {
   cursor: pointer;
   background-color: $light-violet-color;
   color: $white-color;
