--- a/src/assets/styles/css/Pagination.css
+++ b/src/assets/styles/css/Pagination.css
@@ -1,8 +1,8 @@
 .pagination-box {
-  padding: 20px 10px 60px 10px;
+  padding: 20px 0px 60px 0px;
   border-radius: 50%; }
   .pagination-box__main-card {
-    margin: 60px 0;
+    margin: 10px 0px 60px;
     max-height: 500px; }
   .pagination-box--hovered:hover {
     cursor: pointer; }
@@ -11,10 +11,10 @@
   .pagination-box__main-card {
     max-height: none;
     text-align: center;
-    margin: 20px 10px 15px 10px; } }
+    margin: 20px 0px 15px 0px; } }
 @media (max-width: 600px) {
   .pagination-box {
-    padding: 20px 10px 15px 10px; } }
+    padding: 20px 0px 15px 0px; } }
 .pagination {
   padding: 100px 0 0;
   display: flex;
