--- a/src/components/Pagination/Pagination.scss
+++ b/src/components/Pagination/Pagination.scss
@@ -1,11 +1,11 @@
 @import '../../assets/styles/scss/styles.scss';
 
 .pagination-box {
-  padding: 20px 10px 60px 10px;
-  border-radius:50%;
+  padding: 20px 0px 60px 0px;
+  border-radius: 50%;
 
   &__main-card {
-    margin: 60px 0;
+    margin: 10px 0px 60px;
     max-height: 500px;
   }
 
@@ -18,13 +18,13 @@
   .pagination-box__main-card {
     max-height: none;
     text-align: center;
-    margin: 20px 10px 15px 10px;
+    margin: 20px 0px 15px 0px;
   }
 }
 
 @media(max-width: 600px) {
   .pagination-box {
-    padding: 20px 10px 15px 10px;
+    padding: 20px 0px 15px 0px;
   }
 }
 
